# AutoClipEval

./: .gitignore  CLAUDE.md  Makefile  README.md  add_rationale_to_scores.py  app.js  clips.json  dl.sh  index.html  package-lock.json  package.json  pyproject.toml  score_new_rubric.py  scores(1).json  scores.json  server.js
.github/: CONTRIBUTORS.md  copilot-instructions.md
backend/: pyproject.toml  score_new_rubric.py  scores.json
backend/app/: agents.py  atlas.py  main.py  models.py  responses.py  score_rubric.py  script_eval_agent.py
backend/notebooks/: experiments.ipynb
docs/: references.md  rubric.md
servers/: simple_mcp_server.py
tests/: test_endpoint.py  test_nlp_analysis.py  test_openai_structured.py  test_responses_api.py
