[project]
name = "autoclipeval-backend"
version = "0.1.0"
description = "Backend for AutoClipEval, based on FastAPI Full Stack Template."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "openai>=1.82.1",
    "smolagents[toolkit]>=1.17.0",
    "uvicorn[standard]>=0.29.0",
    "yt-dlp>=2025.5.22",
] 

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
